# patchgym

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: train_q_learning.py
patchgym/: __init__.py  cli.py
patchgym/actions/: __init__.py  base.py  guard_actions.py  registry.py  text_actions.py
patchgym/agents/: __init__.py  base.py  heuristic_agent.py  q_learning_agent.py  random_agent.py
patchgym/env/: __init__.py  observation.py  patch_env.py  reward.py
patchgym/reporting/: __init__.py  leaderboard.py
patchgym/runners/: __init__.py  benchmark_runner.py  test_runner.py
patchgym/tasks/: __init__.py  loader.py  schema.py  validator.py
patchgym/trajectories/: __init__.py  logger.py
patchgym/utils/: __init__.py  hashing.py
tasks/task_001_off_by_one/: README.md  buggy.py  metadata.json  tests.py
tasks/task_002_none_guard/: README.md  buggy.py  metadata.json  tests.py
tasks/task_003_wrong_operator/: README.md  buggy.py  metadata.json  tests.py
tasks/task_004_empty_list_guard/: README.md  buggy.py  metadata.json  tests.py
tasks/task_005_less_equal_boundary/: README.md  buggy.py  metadata.json  tests.py
tasks/task_006_not_equal_operator/: README.md  buggy.py  metadata.json  tests.py
tasks/task_007_greater_equal_boundary/: README.md  buggy.py  metadata.json  tests.py
tasks/task_008_less_than_discount/: README.md  buggy.py  (+2 more)
tests/: test_actions.py  test_agents.py  test_benchmark_runner.py  test_cli.py  test_environment.py  test_leaderboard.py  test_task_loader.py  test_test_runner.py  test_trajectory_logger.py
(+28 files in other folders)
