[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "patchgym"
version = "0.1.0"
description = "A lightweight code-repair environment for patching small Python tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pytest>=8.0"]

[project.optional-dependencies]
dev = []
[tool.setuptools.packages.find]
include = ["patchgym*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
